# playstation-crossplay-catalog

./: .env.example  .gitignore  Makefile  README.md  games.json  pyproject.toml
.github/workflows/: refresh.yml
docs/: app.js  games.json  index.html  manifest.webmanifest  style.css  sw.js
ios/: README.md  project.yml
ios/PSCrossplay/: PSCrossplayApp.swift
ios/PSCrossplay.xcodeproj/: project.pbxproj
ios/PSCrossplay/Models/: Game.swift
ios/PSCrossplay/Resources/: seed-games.json
ios/PSCrossplay/Services/: GameStore.swift  KeychainPAT.swift  WorkflowDispatcher.swift
ios/PSCrossplay/Views/: CatalogView.swift  FilterBar.swift  GameCard.swift  RootView.swift  SectionView.swift  SettingsView.swift
overrides/: aliases.csv  known_crossplay.csv  metadata.csv
pipeline/: build.py  enrich_rawg.py  fetch_crossplay.py  fetch_crossplaygames.py  fetch_psplus.py  match.py  normalize.py
web/: index.html  style.css
